--- a/ltam/modules/web/src/main/webapp/pages/try/review.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/try/review.xhtml
@@ -51,7 +51,7 @@
                     <input type="hidden" name="RepReferralId" value="#{ltamprofile.advisor}"/>
                     <f:facet name="footer">
                         <div class="Fleft btn_left">
-                            <a href="/start.xhtml">
+                            <a href="/index.xhtml">
                                 <img class="startover"/>
                             </a>
                         </div>
