--- a/ltam/modules/web/src/main/webapp/start.xhtml
+++ b/ltam/modules/web/src/main/webapp/start.xhtml
@@ -133,7 +133,7 @@
                         <div class="money_icon"></div>
                         <h2>Simple way to save</h2>
 
-                        <p>In only a few minutes, you’ll be invested in a diversified portofolio, based on your objectives, and on your way to long-term saving and investing. All online, simple, and seamless.</p>
+                        <p>In only a few minutes, you’ll be invested in a diversified portfolio, based on your objectives, and on your way to long-term saving and investing. All online, simple, and seamless.</p>
                     </div>
                 </li>
                 <li class="col">
@@ -150,7 +150,7 @@
                         <div class="chart_icon"></div>
                         <h2>Constantly managed</h2>
 
-                        <p>The portofolio available through $ymbil are actively managed by experienced investment professionals and tactically adjusted based on changes in the market. We help you plan for your financial future.</p>
+                        <p>The portfolios available through $ymbil are actively managed by experienced investment professionals and tactically adjusted based on changes in the market. We help you plan for your financial future.</p>
                     </div>
                 </li>
                 <li class="clear"></li>
@@ -165,7 +165,7 @@
             <div class="columns right-col">
                 <h2>We help you plan for your financial future.</h2>
 
-                <p>$ymbil’s proprietary algorithms incorporate key factors such as age, risk tolerance, goals and time horizon to recommend one of five globally diversified portofolios. This means your investment is tailored to your needs and goals. The system is simple enough for first time savers, but provides a level of professional investment management that’s required by the most experienced investors.</p>
+                <p>$ymbil’s proprietary algorithms incorporate key factors such as age, risk tolerance, goals and time horizon to recommend one of five globally diversified portfolios. This means your investment is tailored to your needs and goals. The system is simple enough for first time savers, but provides a level of professional investment management that’s required by the most experienced investors.</p>
                 <a href="https://symbil.com/pages/try/index.xhtml" class="green-button smooth_transition">Get Started</a>
             </div>
             <div class="clear"></div>
