--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1A.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page1A.xhtml
@@ -9,12 +9,13 @@
 
         <div class="Fleft">
             <h1>
-                Hello #{ltamprofile.firstname} #{ltamprofile.lastname};
+                Hello #{ceb.firstname} #{ceb.lastname};
             </h1>
+
             <h2>
                 You have been redirected here from time-to-save.<br/>
                 Now let's begin to create an investement strategy from your
-                <h:outputText value="#{ltamprofile.investment}">
+                <h:outputText value="#{ceb.investment}">
                     <f:convertNumber currencySymbol="$" type="currency"/>
                 </h:outputText> initial amount.
             </h2>
@@ -25,11 +26,19 @@
 
         <div class="Fright">
             <h1>
-                I am <pe:inputNumber styleClass="ltamInputText" style="width: 60px;" value="#{ltamprofile.age}"
+                I am <pe:inputNumber styleClass="ltamInputText" style="width: 60px;" value="#{ceb.age}"
                                      decimalPlaces="0" minValue="0" maxValue="110"
-                    required="true" requiredMessage="Age is required!"
-                    validatorMessage="Age should be between 18 and 100."/> years old.
+                                     required="true" requiredMessage="Age is required!"
+                                     validatorMessage="Age should be between 18 and 100."/> years old.
             </h1>
+        </div>
+
+        <div class="TexAlCenter MarTop20">
+
+            <p:commandButton value="Next" rendered="#{ceb.pagemanager.nextButtonStat}"
+                             update=":ltamForm:contentpanel,:ltamForm:disclaimer"
+                             actionListener="#{ceb.nextPage}"/>
+
         </div>
 
     </div>
