--- a/ltam/modules/web/src/main/webapp/pages/consumer/edit/page5.xhtml
+++ b/ltam/modules/web/src/main/webapp/pages/consumer/edit/page5.xhtml
@@ -15,27 +15,16 @@
 
             <p:panel id="page5table" styleClass="Container100" style="border: 0px">
 
- <!--
-            <p:selectOneRadio id="page5custom" value="#{ltamprofile.ans5}" layout="custom"
-                              required="true" requiredMessage="Please choose one of these choices"
-                              update=":ltamForm:page5table">
-                <f:selectItem itemLabel="1" itemValue="1"/>
-                <f:selectItem itemLabel="2" itemValue="2"/>
-                <f:selectItem itemLabel="3" itemValue="3"/>
-                <f:selectItem itemLabel="4" itemValue="4"/>
-                <f:selectItem itemLabel="5" itemValue="5"/>
-            </p:selectOneRadio>
--->
-            <p:chart type="bar" model="#{ltamprofile.ltamcharts.riskbarChart}" style="height:250px"
-                     rendered="#{ltamprofile.ltamcharts.riskbarChart != null}"
+            <p:chart type="bar" model="#{ceb.ltamcharts.riskbarChart}" style="height:250px"
+                     rendered="#{ceb.ltamcharts.riskbarChart != null}"
                      responsive="true"
                      extender="ltam_riskq5">
-                <p:ajax event="itemSelect" listener="#{ltamprofile.riskChartSelected}" update=":ltamForm:page5id"/>
+                <p:ajax event="itemSelect" listener="#{ceb.riskChartSelected}" update=":ltamForm:page5id"/>
             </p:chart>
 
             <div class="EmptyBox40"></div>
                <h:panelGroup layout="block" styleClass="selection page4_left" id="page5id">
-                <p:selectOneRadio value="#{ltamprofile.ans5}" layout="pageDirection" 
+                <p:selectOneRadio value="#{ceb.ans5}" layout="pageDirection"
                                   required="true" requiredMessage="Please choose one of these choices">
                     <f:selectItem itemLabel="Income" itemValue="1"/>
                     <f:selectItem itemLabel="Income and Growth" itemValue="2"/>
@@ -47,12 +36,12 @@
 
         </p:panel>
         <div class="EmptyBox20"></div>
-        <p:commandButton value="Previous" rendered="#{ltamprofile.pagemanager.prevButtonStat}"
+        <p:commandButton value="Previous" rendered="#{ceb.pagemanager.prevButtonStat}"
                                       update=":ltamForm:contentpanel,:ltamForm:disclaimer"
-                                      actionListener="#{ltamprofile.prevPage}"/>
-                     <p:commandButton styleClass="Fright" value="Next"  rendered="#{ltamprofile.pagemanager.nextButtonStat}"
+                                      actionListener="#{ceb.prevPage}"/>
+                     <p:commandButton styleClass="Fright" value="Next"  rendered="#{ceb.pagemanager.nextButtonStat}"
                                       update=":ltamForm:contentpanel,:ltamForm:disclaimer"
-                                      actionListener="#{ltamprofile.nextPage}"/>
+                                      actionListener="#{ceb.nextPage}"/>
     </div>
 
 </ui:composition>
